<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"/>

        <item android:id="@+id/nav_user"
            android:title="@string/nav_user"
            android:icon="@drawable/ic_user"/>

        <item android:id="@+id/ql_bicycle"
            android:title="Quản lý xe"
            android:icon="@drawable/bicycle"
            />

        <item android:id="@+id/ql_bill"
            android:title="Quản lý hoá đơn"
            android:icon="@drawable/bill"
            />

        <item android:id="@+id/nav_notify"
            android:title="@string/nav_notify"
            android:icon="@drawable/ic_notify" />

        <item android:id="@+id/nav_voucher"
            android:title="@string/nav_voucher"
            android:icon="@drawable/voucher"/>

        <item android:id="@+id/tke"
            android:title="Thống kê doanh thu"
            android:icon="@drawable/report"
            />

    </group>

    <item android:title="@string/nav_account">
        <menu>

            <item android:id="@+id/nav_my_profile"
                android:title="@string/nav_my_profile"
                android:icon="@drawable/ic_my_profile"/>

            <item android:id="@+id/nav_change_password"
                android:title="@string/nav_change_password"
                android:icon="@drawable/ic_password"/>

            <item android:id="@+id/nav_sign_out"
                android:title="@string/nav_sign_out"
                android:icon="@drawable/ic_my_profile"/>
        </menu>
    </item>
</menu>